--- a/Nasa space apps/home.html
+++ b/Nasa space apps/home.html
@@ -96,8 +96,8 @@
         </div>
 
         <div class="video mx-auto mt-5 pt-1">
-          <h2 class="mt-4">Earth's Interconnected Systems: A Sustainable Future Through Agriculture</h2>
-          <p></p>
+          <h2 class="mt-4 mb-4">Earth's Interconnected Systems: A Sustainable Future Through Agriculture</h2>
+          <video src="assets/videos/earths_interconnected_systems.mp4" class="object-fit-fill the-video" controls></video>
         </div>
 
         <div class="summary mx-auto mt-5">
